tests/frontend/fail/array/create_arg_uninitialised_var.act
constructor of A
interface constructor(uint foo)


constructor of B
interface constructor()

creates
  A a := create A(x)
  uint x := 0
